--- a/app/src/main/res/layout/fragment_measurement.xml
+++ b/app/src/main/res/layout/fragment_measurement.xml
@@ -5,7 +5,11 @@
   xmlns:app="http://schemas.android.com/apk/res-auto">
 
   <data>
+    <import type="hochschule.de.bachelorthesis.utility.Converter"/>
 
+    <variable
+      name="vm"
+      type="hochschule.de.bachelorthesis.viewmodels.FoodViewModel"/>
   </data>
 
   <androidx.coordinatorlayout.widget.CoordinatorLayout
@@ -19,7 +23,7 @@
 
       <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <!-- Time information -->
@@ -45,10 +49,11 @@
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
 
           <TextView
+            android:id="@+id/date"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="end"
-            android:text="01/06/2019"
+            android:text="@{vm.measurementModel.timestamp}"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
         </LinearLayout>
 
@@ -66,10 +71,11 @@
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
 
           <TextView
+            android:id="@+id/time_started"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="end"
-            android:text="02:00 pm"
+            android:text="@{vm.measurementModel.timestamp}"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
         </LinearLayout>
 
@@ -87,10 +93,11 @@
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
 
           <TextView
+            android:id="@+id/time_ended"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="end"
-            android:text="04:00 pm"
+            android:text="@{vm.measurementModel.timestamp}"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
         </LinearLayout>
 
@@ -113,14 +120,15 @@
           <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="Amount consumed"
+            android:text="@string/amount_consumed"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
 
           <TextView
+            android:id="@+id/amount"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="end"
-            android:text="200g"
+            android:text="@{Converter.convertInteger(safeUnbox(vm.measurementModel.amount))}"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
         </LinearLayout>
 
@@ -141,7 +149,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="end"
-            android:text="not stressed"
+            android:text="@{vm.measurementModel.stressed}"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
         </LinearLayout>
 
@@ -159,42 +167,22 @@
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
 
           <TextView
+            android:id="@+id/tired"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="end"
-            android:text="A bit tired"
+            android:text="@{vm.measurementModel.tired}"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
         </LinearLayout>
 
-        <LinearLayout
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:layout_marginStart="16dp"
-          android:layout_marginTop="16dp"
-          android:layout_marginEnd="16dp">
-
-          <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="Amount consumed"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
-
-          <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="end"
-            android:text="200g"
-            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
-        </LinearLayout>
 
         <!-- Measurement -->
         <TextView
           android:id="@+id/glucose_values"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:layout_marginStart="16dp"
-          android:layout_marginTop="32dp"
-          android:text="Glucose Values"
+          android:layout_margin="16dp"
+          android:text="@string/glucose_values"
           android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
           android:textColor="@color/colorPrimary"/>
 
@@ -202,20 +190,20 @@
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginStart="16dp"
-          android:layout_marginTop="16dp"
           android:layout_marginEnd="16dp">
 
           <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="Start Value"
+            android:text="@string/start_value"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
 
           <TextView
+            android:id="@+id/glucose_start"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="end"
-            android:text="102"
+            android:text="@{Converter.convertInteger(safeUnbox(vm.measurementModel.value0))}"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
         </LinearLayout>
 
@@ -224,7 +212,7 @@
           android:layout_height="match_parent"
           android:layout_marginStart="16dp"
           android:layout_marginTop="16dp"
-          android:text="Glucose after..."
+          android:text="@string/glucose_after"
           android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"/>
 
         <LinearLayout
@@ -237,14 +225,15 @@
           <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="... 15 minutes"
+            android:text="@string/_15_minutes"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
 
           <TextView
+            android:id="@+id/glucose_15"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="end"
-            android:text="102"
+            android:text="@{Converter.convertInteger(safeUnbox(vm.measurementModel.value15))}"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
         </LinearLayout>
 
@@ -258,14 +247,15 @@
           <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="...30 minutes"
+            android:text="@string/_30_minutes"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
 
           <TextView
+            android:id="@+id/glucose_30"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="end"
-            android:text="110"
+            android:text="@{Converter.convertInteger(safeUnbox(vm.measurementModel.value30))}"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
         </LinearLayout>
 
@@ -279,14 +269,15 @@
           <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="...45 minutes"
+            android:text="@string/_45_minutes"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
 
           <TextView
+            android:id="@+id/glucose_45"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="end"
-            android:text="115"
+            android:text="@{Converter.convertInteger(safeUnbox(vm.measurementModel.value45))}"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
         </LinearLayout>
 
@@ -300,14 +291,15 @@
           <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="...60 minutes"
+            android:text="@string/_60_minutes"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
 
           <TextView
+            android:id="@+id/glucose_60"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="end"
-            android:text="110"
+            android:text="@{Converter.convertInteger(safeUnbox(vm.measurementModel.value60))}"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
         </LinearLayout>
 
@@ -321,14 +313,15 @@
           <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="...75 minutes"
+            android:text="@string/_75_minutes"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
 
           <TextView
+            android:id="@+id/glucose_75"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="end"
-            android:text="110"
+            android:text="@{Converter.convertInteger(safeUnbox(vm.measurementModel.value75))}"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
         </LinearLayout>
 
@@ -342,15 +335,16 @@
           <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="...90 minutes"
+            android:text="@string/_90_minutes"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
 
           <TextView
+            android:id="@+id/glucose_90"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="end"
-            android:text="110"
+            android:text="@{Converter.convertInteger(safeUnbox(vm.measurementModel.value90))}"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
         </LinearLayout>
 
@@ -364,14 +358,15 @@
           <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="...105 minutes"
+            android:text="@string/_105_minutes"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
 
           <TextView
+            android:id="@+id/glucose_105"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="end"
-            android:text="110"
+            android:text="@{Converter.convertInteger(safeUnbox(vm.measurementModel.value105))}"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
         </LinearLayout>
 
@@ -385,14 +380,15 @@
           <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:text="...120 minutes"
+            android:text="@string/_120_minutes"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
 
           <TextView
+            android:id="@+id/glucose_120"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="end"
-            android:text="110"
+            android:text="@{Converter.convertInteger(safeUnbox(vm.measurementModel.value120))}"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
         </LinearLayout>
       </LinearLayout>
