--- a/app/src/main/res/layout/fragment_edit_measurement.xml
+++ b/app/src/main/res/layout/fragment_edit_measurement.xml
@@ -52,7 +52,7 @@
           android:gravity="center"
           android:paddingStart="32dp"
           android:paddingEnd="32dp"
-          android:text="@{vm.MeasurementCurrentModel"
+          android:text="@{vm.measurementModel.timestamp"
           />
       </LinearLayout>
 
