--- a/app/src/main/res/layout/fragment_food_data.xml
+++ b/app/src/main/res/layout/fragment_food_data.xml
@@ -19,7 +19,7 @@
     <ScrollView
       android:id="@+id/scroll"
       android:layout_width="match_parent"
-      android:layout_height="wrap_content">
+      android:layout_height="match_parent">
 
       <LinearLayout
         android:layout_width="match_parent"
@@ -59,7 +59,7 @@
         <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
-          android:layout_marginTop="16dp"
+          android:layout_marginTop="8dp"
           android:layout_marginStart="16dp"
           android:layout_marginEnd="16dp">
 
@@ -80,7 +80,7 @@
         <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
-          android:layout_marginTop="16dp"
+          android:layout_marginTop="8dp"
           android:layout_marginStart="16dp"
           android:layout_marginEnd="16dp">
 
@@ -131,7 +131,7 @@
         <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
-          android:layout_marginTop="16dp"
+          android:layout_marginTop="8dp"
           android:layout_marginStart="16dp"
           android:layout_marginEnd="16dp">
 
@@ -152,7 +152,7 @@
         <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
-          android:layout_marginTop="16dp"
+          android:layout_marginTop="8dp"
           android:layout_marginStart="16dp"
           android:layout_marginEnd="16dp">
 
@@ -173,7 +173,7 @@
         <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
-          android:layout_marginTop="16dp"
+          android:layout_marginTop="8dp"
           android:layout_marginStart="16dp"
           android:layout_marginEnd="16dp">
 
@@ -194,7 +194,7 @@
         <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
-          android:layout_marginTop="16dp"
+          android:layout_marginTop="8dp"
           android:layout_marginStart="16dp"
           android:layout_marginEnd="16dp">
 
@@ -215,7 +215,7 @@
         <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
-          android:layout_marginTop="16dp"
+          android:layout_marginTop="8dp"
           android:layout_marginStart="16dp"
           android:layout_marginEnd="16dp">
 
@@ -236,7 +236,7 @@
         <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
-          android:layout_marginTop="16dp"
+          android:layout_marginTop="8dp"
           android:layout_marginStart="16dp"
           android:layout_marginEnd="16dp">
 
@@ -257,7 +257,7 @@
         <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
-          android:layout_marginTop="16dp"
+          android:layout_marginTop="8dp"
           android:layout_marginStart="16dp"
           android:layout_marginEnd="16dp">
 
