--- a/app/src/main/res/layout/fragment_me.xml
+++ b/app/src/main/res/layout/fragment_me.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-  xmlns:app="http://schemas.android.com/apk/res-auto"
-  xmlns:tools="http://schemas.android.com/tools">
+  xmlns:app="http://schemas.android.com/apk/res-auto">
 
   <data>
     <import type="hochschule.de.bachelorthesis.utility.Converter"/>
@@ -16,160 +15,217 @@
     android:layout_height="match_parent">
 
     <ScrollView
+      android:id="@+id/scroll"
       android:layout_width="match_parent"
       android:layout_height="match_parent">
 
-      <TableLayout
+      <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:stretchColumns="1"
-        tools:context=".view.MainActivity">
+        android:orientation="vertical">
 
+        <!-- PERSONAL DATA -->
         <TextView
+          android:id="@+id/time"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:paddingTop="16dp"
+          android:layout_margin="16dp"
           android:text="@string/personal_data"
           android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
           android:textColor="@color/colorPrimary"/>
 
-        <TableRow>
+        <LinearLayout
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_marginStart="16dp"
+          android:layout_marginEnd="16dp">
+
           <TextView
-            android:layout_column="1"
-            android:padding="3dip"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
             android:text="@string/age"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
 
           <TextView
-            android:id="@+id/fragment_me_age"
+            android:id="@+id/age"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:gravity="end"
-            android:padding="3dip"
             android:text="@{Converter.convertInteger(safeUnbox(vm.age))}"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
-        </TableRow>
+        </LinearLayout>
 
-        <TableRow>
+        <LinearLayout
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_marginTop="8dp"
+          android:layout_marginStart="16dp"
+          android:layout_marginEnd="16dp">
+
           <TextView
-            android:layout_column="1"
-            android:padding="3dip"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
             android:text="@string/height"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
 
           <TextView
-            android:id="@+id/fragment_me_height"
+            android:id="@+id/height"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:gravity="end"
-            android:padding="3dip"
             android:text="@{Converter.convertInteger(safeUnbox(vm.height))}"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
-        </TableRow>
+        </LinearLayout>
 
-        <TableRow>
+        <LinearLayout
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_marginTop="8dp"
+          android:layout_marginStart="16dp"
+          android:layout_marginEnd="16dp">
+
           <TextView
-            android:layout_column="1"
-            android:padding="3dip"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
             android:text="@string/weight"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
 
           <TextView
-            android:id="@+id/fragment_me_weight"
+            android:id="@+id/weight"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:gravity="end"
-            android:padding="3dip"
             android:text="@{Converter.convertInteger(safeUnbox(vm.weight))}"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
-        </TableRow>
+        </LinearLayout>
 
-        <TableRow>
+        <LinearLayout
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_marginTop="8dp"
+          android:layout_marginStart="16dp"
+          android:layout_marginEnd="16dp">
+
           <TextView
-            android:layout_column="1"
-            android:padding="3dip"
+            android:id="@+id/sex"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
             android:text="@string/sex"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
 
           <TextView
-            android:id="@+id/fragment_me_gender"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:gravity="end"
-            android:padding="3dip"
             android:text="@{vm.sex}"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
-        </TableRow>
+        </LinearLayout>
 
+        <!-- LIFESTYLE -->
         <TextView
+          android:id="@+id/textView"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:paddingTop="20dp"
+          android:layout_margin="16dp"
           android:text="@string/lifestyle"
           android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
           android:textColor="@color/colorPrimary"/>
 
-        <TableRow>
+        <LinearLayout
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_marginStart="16dp"
+          android:layout_marginEnd="16dp">
+
           <TextView
-            android:layout_column="1"
-            android:padding="3dip"
-            android:text="@string/fitness_level"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="@string/energy_kcal"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
 
           <TextView
-            android:id="@+id/fragment_me_fitness_level"
+            android:id="@+id/fitness_level"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:gravity="end"
-            android:padding="3dip"
             android:text="@{vm.fitnessLevel}"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
-        </TableRow>
+        </LinearLayout>
 
-        <TableRow>
+        <LinearLayout
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_marginTop="8dp"
+          android:layout_marginStart="16dp"
+          android:layout_marginEnd="16dp">
+
           <TextView
-            android:layout_column="1"
-            android:padding="3dip"
+            android:id="@+id/medication"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
             android:text="@string/taking_medication"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
 
           <TextView
-            android:id="@+id/fragment_me_medication"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:gravity="end"
-            android:padding="3dip"
-            android:text="@{Converter.convertBoolean(safeUnbox(vm.medication))}"
+            android:text="@{Converter.convertBoolean((safeUnbox(vm.medication)))}"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
-        </TableRow>
+        </LinearLayout>
 
-        <TableRow>
+        <LinearLayout
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_marginTop="8dp"
+          android:layout_marginStart="16dp"
+          android:layout_marginEnd="16dp">
+
           <TextView
-            android:layout_column="1"
-            android:padding="3dip"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
             android:text="@string/allergies_available"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
 
           <TextView
-            android:id="@+id/fragment_me_allergies"
+            android:id="@+id/allergies"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:gravity="end"
-            android:padding="3dip"
-            android:text="@{Converter.convertBoolean(safeUnbox(vm.allergies))}"
+            android:text="@{Converter.convertBoolean((safeUnbox(vm.allergies)))}"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
-        </TableRow>
+        </LinearLayout>
 
-        <TableRow>
+        <LinearLayout
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_marginTop="8dp"
+          android:layout_marginStart="16dp"
+          android:layout_marginEnd="16dp">
+
           <TextView
-            android:layout_column="1"
-            android:padding="3dip"
-            android:text="@string/smoking"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="@string/of_which_saturates"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
 
           <TextView
-            android:id="@+id/fragment_me_smoking"
+            android:id="@+id/smoking"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:gravity="end"
-            android:padding="3dip"
-            android:text="@{Converter.convertBoolean(safeUnbox(vm.smoking))}"
+            android:text="@{Converter.convertBoolean((safeUnbox(vm.smoking)))}"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>
-        </TableRow>
-      </TableLayout>
+        </LinearLayout>
+      </LinearLayout>
     </ScrollView>
 
     <hochschule.de.bachelorthesis.widget.BetterFloatingActionButton
       android:id="@+id/button_edit_me"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
-      android:layout_gravity="bottom|end"
       android:layout_margin="@dimen/fab_margin"
+      android:layout_gravity="bottom|end"
       app:srcCompat="@drawable/ic_edit_white"/>
   </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
